src/z80asm/z80asm2/t/45-symbols/expected/decl_matrix_8A.txt
% z88dk-z80asm -v -dump-after-symbol-collection t/45-symbols//input/decl_matrix_8A.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/45-symbols/input/decl_matrix_8A.asm...
t/45-symbols/input/decl_matrix_8A.asm:6:12: error: Undefined symbol: x
        public x
               ^
Assembly completed with 1 error
